
- Make the `chain` command accept a '[@unit:]filename' argument.

- Make the `extract` command detect circular track/sector links.


** cartconv fixes
-----------------

- Added support for the new extended CRT V2 format, which now supports all
  other CBM computers (see manual for details).

- Added support for C128, VIC20 and Plus4 cartridges.


** cartconv fixes
-----------------

- correctly align (5 digit) line numbers.


** Monitor fixes
----------------

- Make the `device` command switch to computer when not given an argument.

- Add `warp [on|off|toggle]` command.

- Fix not being able to delete the final character on a line with DEL.

- Drive CPU emulation now catches up to main CPU automatically.

- Snapshots autostarted from monitor will immediately update the screen
  (interlaced screens not fully supported).

- Fixed various user input performance and consistency problems.

- 'chis' command now prints a 12 digit cycle counter.

- 'chis' command now works for drives

- Fixed execution order of multiple -moncommands arguments.

- Fixed single-stepping on "secondary" CPU (eg Z80 in x128).

- Fixed Z80 disasssembler, all opcodes are supported now.

- Make the CPU bank the default, not RAM.

- In x64sc, fixed reading 0/1 when CPU bank is active.

- Fixed display of multicolor sprites.


** SDL fixes
------------

- New SDL2 dual window support (VDC in x128).

- Removed unneeded items from some SDL menus.

- New D67 image creation menu items.

- Fixed relative paths in the SDL file/directory selection dialog.

- New host joystick axis mapping support for emulated paddles and analog 
  joysticks.

- Mapping of host joysticks menu now shows what the pins are already mapped to.

- Add application icons to SDL1.2 binaries.

- Fixed display corruption and OpenGL detection on some machines


** GTK3 fixes
-------------

- Added bicubic rendering, which improves the look of a resized window with the
  CRT filter enabled.

- Remove sandbox mode.
